background fixed on mobile devices

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,17 +15,32 @@ h1 {
     font-weight: 300;
 }
 
+
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: url("../assets/img/Pattern.jpg");
     width: 100%;
     height: 100vh;
 
-    @media (max-width: 1120px) {
-        justify-content: start;
+    padding: 30px 0;
+
+    &::after {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: url("../assets/img/Pattern.jpg");
+        background-repeat: repeat;
+        
+        z-index: -1;
     }
+
+    @media (max-width: 1120px) {
+         justify-content: flex-start;
+     }
 
     .container-content {
         display: flex;
